# nono

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: bubbles.ts  constants.ts  eventBus.ts  getLayout.ts  getScreenSide.ts  getWindowPosition.ts  hairclipResize.ts  layout.ts  math.ts  nonoBubble.ts  nonoState.ts  notify.ts  panelDock.ts  persist.ts  resizeLogic.ts  screen.ts  storage.ts  storageTodos.ts  window.ts  windowControl.ts  windowSize.ts  windowState.ts
src/lib/component/: NonoBubble.svelte  aichat.svelte  applicationsSection.svelte  calDebug.svelte  nonoCalendar.svelte  todoPanel.svelte
src/routes/: +layout.ts  +page.svelte
src/types/: event-calendar.d.ts
